# lcstats_relay

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  apm.lock.yaml  apm.yml  main.py  pyproject.toml
.agents/skills/changelog-workflow/agents/: openai.yaml
.agents/skills/code-quality-check/agents/: openai.yaml
.agents/skills/commit-message-quality-check/agents/: openai.yaml
.agents/skills/document-quality-check/agents/: openai.yaml
.agents/skills/git-worktree-workflow/agents/: openai.yaml
.agents/skills/github-actions-quality-check/agents/: openai.yaml
.agents/skills/gitignore-workflow/agents/: openai.yaml
.agents/skills/issue-quality-check/agents/: openai.yaml
.agents/skills/pull-request-quality-check/agents/: openai.yaml
.agents/skills/python-quality-check/: SKILL.md
.agents/skills/python-quality-check/agents/: openai.yaml
.agents/skills/release-note-workflow/agents/: openai.yaml
.agents/skills/security-check/: SKILL.md
.agents/skills/security-check/agents/: openai.yaml
.agents/skills/skill-quality-check/agents/: openai.yaml
.github/actions/build-desktop/: action.yml
.github/actions/generate-version/: action.yml
.github/actions/install-workflow-tools/: action.yml
.github/actions/lint-source/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test-source/: action.yml
.github/workflows/: build.yml  ci.yml  lint.yml  main.yml  pull-request.yml  release.yml  test.yml
docs/: README.md  lcstats-tracker-contract.md  lcstats-tracker-io.md  loopback-connection-policy.md  relay-output-architecture.md
docs/architecture/: README.md  application-structure.md  relay-output.md  ui-state-and-lifecycle.md
docs/domain/: README.md  lcstats-tracker-contract.md  loopback-connection-policy.md
docs/operations/: README.md  data-and-recovery.md  development.md  release.md
scripts/: __init__.py  package_desktop.py  release_manifest.py  verify_desktop_archive.py  version_metadata.py
src/: main.py
src/lcstats_relay/: __init__.py  __main__.py
src/lcstats_relay/app/: __init__.py  composition.py  main.py
src/lcstats_relay/application/: __init__.py  dispatcher.py  ports.py  relay.py  settings.py  state.py
src/lcstats_relay/composition/: __init__.py  application.py
src/lcstats_relay/core/: __init__.py  auth.py  config.py  dispatcher.py  outputs.py  payload.py  receiver.py  relay.py  state.py  storage.py
src/lcstats_relay/domain/: __init__.py  payload.py
src/lcstats_relay/entrypoints/: __init__.py  flet_app.py
src/lcstats_relay/infrastructure/: auth.py  config.py  filesystem.py  outputs.py  receiver.py  runtime.py  storage.py
src/lcstats_relay/presentation/: __init__.py  controller.py  models.py  presenters.py  validation.py
src/lcstats_relay/ui/: __init__.py  monitor.py
tests/: test_app.py  test_config.py  test_controller.py  test_flet_entrypoint.py  test_main.py  test_package_desktop.py  test_receiver.py  test_relay.py  test_release_manifest.py  test_storage.py  test_ui.py  test_verify_desktop_archive.py  test_version_metadata.py
