[project]
name = "lcstats-relay"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet[all]>=0.85.3,<0.86.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[project.scripts]
lcstats-relay = "lcstats_relay.__main__:main"

[tool.uv]
# msgpack 1.2.1 fixes GHSA-6v7p-g79w-8964, so keep the patched artifact exact.
# Remove only the cooldown exemption after 2026-06-25; reassess the pin separately.
constraint-dependencies = ["msgpack==1.2.1"]
exclude-newer = "P7D"
exclude-newer-package = { msgpack = false }

[tool.flet.app]
path = "src"
module = "main"

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.17,<0.16.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    # pycodestyle errors: catch syntax-adjacent style issues and common readability problems.
    "E",
    # Pyflakes: catch undefined names, unused imports, and suspicious bindings.
    "F",
    # isort: keep imports deterministic and review-friendly.
    "I",
    # flake8-annotations: require explicit public signatures before mypy has to infer them.
    "ANN",
    # flake8-bugbear: catch likely bugs and sharp Python edge cases.
    "B",
    # flake8-comprehensions: prefer clearer and faster comprehension forms.
    "C4",
    # flake8-commas: keep multi-line literals stable under future edits.
    "COM",
    # pydocstyle: keep public API documentation visible as the project grows.
    "D",
    # eradicate: reject commented-out code before it becomes misleading history.
    "ERA",
    # flynt: prefer f-strings over older interpolation styles.
    "FLY",
    # pep8-naming: keep names conventional for Python readers and tools.
    "N",
    # Perflint: flag avoidable performance footguns in ordinary code.
    "PERF",
    # Pylint-derived rules: add broad maintainability checks without running Pylint separately.
    "PL",
    # flake8-pytest-style: keep tests idiomatic and easy to scan.
    "PT",
    # flake8-use-pathlib: prefer pathlib for filesystem paths.
    "PTH",
    # Ruff-specific rules: enable extra fixes and checks unique to Ruff.
    "RUF",
    # flake8-simplify: reduce unnecessary branching and boolean noise.
    "SIM",
    # tryceratops: keep exception handling specific and maintainable.
    "TRY",
    # pyupgrade: keep syntax modern for the configured Python target.
    "UP",
]
ignore = [
    # pydocstyle: prefer no blank line before a class docstring; conflicts with D211.
    "D203",
    # pydocstyle: prefer multi-line docstring summaries on the first line; conflicts with D212.
    "D213",
    # flake8-commas: let Ruff format own trailing comma decisions.
    "COM812",
]

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--cov=lcstats_relay",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=100",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']
fail_under = 100
show_missing = true
skip_covered = false
